# Task2_Web

./: CMakeLists.txt  Task2_Web.pro  main.cpp  mainwindow.cpp  mainwindow.h  sfdf.h  spider.cpp  spider.h  web.cpp  web.h  widget.cpp  widget.h
Task2_Web_mura/: web.h  widget.cpp
src/web/: web.cpp  web.h
src/widget/: widget.cpp  widget.h
web task_2/: Makefile  Makefile.Debug  Makefile.Release  README.md  main.cpp  web.cpp  web.h  widget.cpp  widget.h
web task_2/debug/: moc_web.cpp  moc_widget.cpp
